# MapReduceWikiFilter

./: CMakeLists.txt  README.md  commons.cpp  commons.h  map.py  mapreduce.cpp  reduce.py  runner.cpp  runner.h  sort.cpp
data/: test_wiki_urls.txt  test_words.txt  wiki_urls.txt  words.txt
